crates/sneklsp_lexer/src/snapshots/sneklsp_lexer__tests__snapshot__tokenize_simple_expressions.snap
---
source: crates/sneklsp_lexer/src/lib.rs
expression: tokenize_to_string(source)
---
Import "import"
Comment "# import statements"
Name "boto3"
Newline "\n"
From "from"
Name "botocore"
Dot "."
Name "exceptions"
Import "import"
Name "ClientError"
Newline "\n"
From "from"
Name "aws_cdk"
Import "import"
LParen "("
Name "App"
Comma ","
Name "aws_events"
As "as"
Name "events"
Comma ","
RParen ")"
Newline "\n"
Name "NAMESPACE"
Comment "# environment variables"
Eq "="
Name "os"
Dot "."
Name "environ"
LBracket "["
String "\"NAMESPACE\""
RBracket "]"
Newline "\n"
Name "REGION"
Eq "="
Name "os"
Dot "."
Name "getenv"
LParen "("
String "\"AWS_REGION\""
Comma ","
Name "os"
Dot "."
Name "getenv"
LParen "("
String "\"AWS_DEFAULT_REGION\""
RParen ")"
RParen ")"
Newline "\n"
Name "PARTITION"
Eq "="
Name "os"
Dot "."
Name "environ"
Dot "."
Name "get"
LParen "("
String "\"AWS_PARTITION\""
Comma ","
Name "boto3"
Dot "."
Name "Session"
LParen "("
RParen ")"
Dot "."
Name "get_partition_for_region"
LParen "("
Name "region_name"
Eq "="
Name "REGION"
RParen ")"
Comma ","
RParen ")"
Newline "\n"
Name "x"
Comment "# basic expressions"
Eq "="
Int "1"
Newline "\n"
Name "y"
Eq "="
Float "2.5"
Newline "\n"
Name "z"
Eq "="
String "\"hello\""
Newline "\n"
Name "a"
Comment "# binary operations"
Eq "="
Int "1"
Plus "+"
Int "2"
Newline "\n"
Name "b"
Eq "="
Int "3"
Star "*"
Int "4"
Minus "-"
Int "5"
Newline "\n"
Name "c"
Eq "="
Int "10"
Slash "/"
Int "2"
Newline "\n"
Name "d"
Eq "="
Int "7"
DoubleSlash "//"
Int "3"
Newline "\n"
Name "e"
Eq "="
Int "8"
Percent "%"
Int "3"
Newline "\n"
Name "f"
Eq "="
Int "2"
DoubleStar "**"
Int "10"
Newline "\n"
Name "g"
Comment "# comparison"
Eq "="
Name "x"
Lt "<"
Name "y"
Newline "\n"
Name "h"
Eq "="
Name "x"
EqEq "=="
Int "1"
Newline "\n"
Name "i"
Eq "="
Name "y"
NotEq "!="
Name "z"
Newline "\n"
Name "my_list"
Comment "# list/dict"
Eq "="
LBracket "["
Int "1"
Comma ","
Int "2"
Comma ","
Int "3"
RBracket "]"
Newline "\n"
Name "my_dict"
Eq "="
LBrace "{"
String "\"a\""
Colon ":"
Int "1"
Comma ","
String "\"b\""
Colon ":"
Int "2"
RBrace "}"
Newline "\n"
Name "my_tuple"
Eq "="
LParen "("
Int "1"
Comma ","
Int "2"
Comma ","
Int "3"
RParen ")"
Newline "\n"
Name "result"
Comment "# function call"
Eq "="
Name "print"
LParen "("
String "\"hello\""
RParen ")"
Newline "\n"
