crates/sneklsp_lexer/src/snapshots/sneklsp_lexer__tests__snapshot__tokenize_simple_functions.snap
---
source: crates/sneklsp_lexer/src/lib.rs
expression: tokenize_to_string(source)
---
Def "def"
Name "greet"
LParen "("
Name "name"
RParen ")"
Colon ":"
Newline "\n"
Indent "    "
Return "return"
String "\"Hello, \""
Plus "+"
Name "name"
Newline "\n"
Dedent ""
Def "def"
Name "add"
LParen "("
Name "a"
Comma ","
Name "b"
RParen ")"
Colon ":"
Newline "\n"
Indent "    "
Return "return"
Name "a"
Plus "+"
Name "b"
Newline "\n"
Dedent ""
Def "def"
Name "factorial"
LParen "("
Name "n"
RParen ")"
Colon ":"
Newline "\n"
Indent "    "
If "if"
Name "n"
LtEq "<="
Int "1"
Colon ":"
Newline "\n"
Indent "        "
Return "return"
Int "1"
Newline "\n"
Dedent "    "
Return "return"
Name "n"
Star "*"
Name "factorial"
LParen "("
Name "n"
Minus "-"
Int "1"
RParen ")"
Newline "\n"
Dedent ""
Class "class"
Name "Point"
Colon ":"
Newline "\n"
Indent "    "
Def "def"
Name "__init__"
LParen "("
Name "self"
Comma ","
Name "x"
Comma ","
Name "y"
RParen ")"
Colon ":"
Newline "\n"
Indent "        "
Name "self"
Dot "."
Name "x"
Eq "="
Name "x"
Newline "\n"
Name "self"
Dot "."
Name "y"
Eq "="
Name "y"
Newline "\n"
Dedent "    "
Def "def"
Name "distance"
LParen "("
Name "self"
RParen ")"
Colon ":"
Newline "\n"
Indent "        "
Return "return"
LParen "("
Name "self"
Dot "."
Name "x"
DoubleStar "**"
Int "2"
Plus "+"
Name "self"
Dot "."
Name "y"
DoubleStar "**"
Int "2"
RParen ")"
DoubleStar "**"
Float "0.5"
Newline "\n"
Dedent ""
Dedent ""
If "if"
Name "__name__"
EqEq "=="
String "\"__main__\""
Colon ":"
Newline "\n"
Indent "    "
Name "print"
LParen "("
Name "greet"
LParen "("
String "\"World\""
RParen ")"
RParen ")"
Newline "\n"
Name "print"
LParen "("
Name "add"
LParen "("
Int "1"
Comma ","
Int "2"
RParen ")"
RParen ")"
Newline "\n"
Name "print"
LParen "("
Name "factorial"
LParen "("
Int "5"
RParen ")"
RParen ")"
Newline "\n"
Dedent ""
