crates/sneklsp_lexer/src/snapshots/sneklsp_lexer__tests__snapshot__tokenize_simple_hello.snap
---
source: crates/sneklsp_lexer/src/lib.rs
expression: tokenize_to_string(source)
---
Def "def"
Name "greet"
LParen "("
Name "name"
Colon ":"
Name "str"
RParen ")"
Arrow "->"
Name "str"
Colon ":"
Newline "\n"
Indent "    "
Return "return"
String "f\"Hello, {name}!\""
Newline "\n"
Dedent ""
If "if"
Name "__name__"
EqEq "=="
String "\"__main__\""
Colon ":"
Newline "\n"
Indent "    "
Name "print"
LParen "("
Name "greet"
LParen "("
String "\"World\""
RParen ")"
RParen ")"
Newline "\n"
Dedent ""
